Embrane LBaaS Driver
Implements blueprint embrane-lbaas-driver

This commit implements Embrane's driver for LBaaS,
which uses Embrane's heleos(tm) appliances to provide Load Balancing.

Change-Id: Ia76fbc8881d178cfe6df11a2cfe8e77d3f36094f

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -339,7 +339,7 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # quota_health_monitors = -1
 
 # Number of routers allowed per tenant. A negative value means unlimited.
-# quota_router = 10
+# quota_router = 10
 
 # Number of floating IPs allowed per tenant. A negative value means unlimited.
 # quota_floatingip = 50
@@ -427,3 +427,5 @@ service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVP
 # service_provider=LOADBALANCER:NetScaler:neutron.services.loadbalancer.drivers.netscaler.netscaler_driver.NetScalerPluginDriver
 # Uncomment the following line (and comment out the OpenSwan VPN line) to enable Cisco's VPN driver.
 # service_provider=VPN:cisco:neutron.services.vpn.service_drivers.cisco_ipsec.CiscoCsrIPsecVPNDriver:default
+# Uncomment the line below to use Embrane heleos as Load Balancer service provider.
+# service_provider=LOADBALANCER:Embrane:neutron.services.loadbalancer.drivers.embrane.driver.EmbraneLbaas:default
