Metadata agent caches networks for routers
During cloud-init there are several calls that asks neutron API for the
same data which will not be most likely changed. Specifically router's
networks are cached.

Closes-bug: #1276440
Change-Id: Ic5eedb8057c7f4934eed08869ebf55c91e6edfc9

--- a/etc/metadata_agent.ini
+++ b/etc/metadata_agent.ini
@@ -50,3 +50,9 @@ admin_password = %SERVICE_PASSWORD%
 
 # Number of backlog requests to configure the metadata server socket with
 # metadata_backlog = 128
+
+# URL to connect to the cache backend.
+# default_ttl=0 parameter will cause cache entries to never expire.
+# Otherwise default_ttl specifies time in seconds a cache entry is valid for.
+# No cache is used in case no value is passed.
+# cache_url = memory://?default_ttl=5
