Cisco APIC ML2 mechanism driver, part 1
This set of changes introduces a mechanism driver for the
Cisco APIC. Please see the blueprint for more information.

The review is submitted in two parts:
- Part 1 (this one)
    o APIC REST Client
    o APIC data model and migration script
    o APIC configurations
- Part 2 (dependent on part 1)
    o APIC mechanism driver
    o APIC manager

Partially implements: blueprint ml2-cisco-apic-mechanism-driver

Change-Id: I698b25ca975fed746107ee64f03563ef1a56e0ef

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -46,3 +46,49 @@
 # ssh_port=22
 # username=admin
 # password=mySecretPassword
+
+[ml2_cisco_apic]
+
+# Hostname for the APIC controller
+# apic_host=1.1.1.1
+
+# Username for the APIC controller
+# apic_username=user
+
+# Password for the APIC controller
+# apic_password=password
+
+# Port for the APIC Controller
+# apic_port=80
+
+# Names for APIC objects used by Neutron
+# Note: When deploying multiple clouds against one APIC,
+#       these names must be unique between the clouds.
+# apic_vmm_domain=openstack
+# apic_vlan_ns_name=openstack_ns
+# apic_node_profile=openstack_profile
+# apic_entity_profile=openstack_entity
+# apic_function_profile=openstack_function
+
+# The following flag will cause all the node profiles on the APIC to
+# be cleared when neutron-server starts. This is typically used only
+# for test environments that require clean-slate startup conditions.
+# apic_clear_node_profiles=False
+
+# Specify your network topology.
+# This section indicates how your compute nodes are connected to the fabric's
+# switches and ports. The format is as follows:
+#
+# [switch:<swich_id_from_the_apic>]
+# <compute_host>,<compute_host>=<switchport_the_host(s)_are_connected_to>
+#
+# You can have multiple sections, one for each switch in your fabric that is
+# participating in Openstack. e.g.
+#
+# [switch:17]
+# ubuntu,ubuntu1=1/10
+# ubuntu2,ubuntu3=1/11
+#
+# [switch:18]
+# ubuntu5,ubuntu6=1/1
+# ubuntu7,ubuntu8=1/2
