One Convergence Neutron Plugin l3 ext support
Adding support for l3 extensions and security-groups.

Change-Id: I7007dba1cc8f73496a2a40099581d07ae697520a
Implements: blueprint oc-nvsd-neutron-plugin

--- a/etc/neutron/plugins/oneconvergence/nvsdplugin.ini
+++ b/etc/neutron/plugins/oneconvergence/nvsdplugin.ini
@@ -19,5 +19,13 @@
 # Specify 0 to retry until success (default)
 # nvsd_retries = 0
 
+[securitygroup]
+# Specify firewall_driver option, if neutron security groups are disabled,
+# then NoopFirewallDriver otherwise OVSHybridIptablesFirewallDriver.
+# firewall_driver = neutron.agent.firewall.NoopFirewallDriver
+
+[agent]
+# root_helper = sudo /usr/local/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
+
 [database]
 # connection = mysql://root:<passwd>@127.0.0.1/<neutron_db>?charset=utf8
