Use patch ports to interconnect integration/physical bridges
Use by default patch ports to interconnect the integration to
physical bridges for the openvswitch agent in order to increase
performance.

For ovs/kernel without ovs patch port support on kernel side, veths
can be used through the new option OVS.use_veth_interconnection.

Patch port support can be tested using:

    neutron-sanity-check --ovs_patch

DocImpact
Closes-Bug: #1285335
Change-Id: I47106e57bf5b23891d7bf43815959e0d10156fba

--- a/etc/neutron/plugins/openvswitch/ovs_neutron_plugin.ini
+++ b/etc/neutron/plugins/openvswitch/ovs_neutron_plugin.ini
@@ -83,6 +83,11 @@
 # bridge_mappings =
 # Example: bridge_mappings = physnet1:br-eth1
 
+# (BoolOpt) Use veths instead of patch ports to interconnect the integration
+# bridge to physical networks. Support kernel without ovs patch port support
+# so long as it is set to True.
+# use_veth_interconnection = False
+
 [agent]
 # Agent's polling interval in seconds
 # polling_interval = 2
@@ -117,6 +122,7 @@
 # (IntOpt) This is the MTU size of veth interfaces.
 # Do not change unless you have a good reason to.
 # The default MTU size of veth interfaces is 1500.
+# This option has no effect if use_veth_interconnection is False
 # veth_mtu =
 # Example: veth_mtu = 1504
 
