Send network-changed notifications to nova
This patch notifies nova whenever a floatingip or fixed_ip is updated.

Implements blueprint: nova-event-callback

DocImpact - This notifications are off by default.

Change-Id: Ifbe9d856e80e512d5595fd72ea2d7c047ce0de9d

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -296,6 +296,10 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # Send notification to nova when port status is active.
 # notify_nova_on_port_status_changes = True
 
+# Send notifications to nova when port data (fixed_ips/floatingips) change
+# so nova can update it's cache.
+# notify_nova_on_port_data_changes = True
+
 # URL for connection to nova (Only supports one nova region currently).
 # nova_url = http://127.0.0.1:8774
 
