--- a/etc/neutron/plugins/oneconvergence/nvsdplugin.ini
+++ b/etc/neutron/plugins/oneconvergence/nvsdplugin.ini
@@ -24,6 +24,10 @@
 # then NoopFirewallDriver otherwise OVSHybridIptablesFirewallDriver.
 # firewall_driver = neutron.agent.firewall.NoopFirewallDriver
 
+# Controls if neutron security group is enabled or not.
+# It should be false when you use nova security group.
+# enable_security_group = True
+
 [agent]
 # root_helper = sudo /usr/local/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 
