ML2 Cisco Nexus MD: Support portchannel interfaces
Port of port-channel interface support that was implemented for the cisco
core plugin - https://review.openstack.org/#/c/42037

Note that additional port-channel UT already existed. (Created during
initial cisco core nexus subplugin -> ml2 cisco nexus md port.)
See test_cisco_nexus.py module, NEXUS_PORTCHANNELS references.

Closes-Bug: 1294900
Change-Id: Ifc64f605e5783ee1e85d66c87f422f64b47fa996

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -23,13 +23,16 @@
 #
 # Cisco Nexus Switch Format.
 # [ml2_mech_cisco_nexus:<IP address of switch>]
-# <hostname>=<port>                 (1)
+# <hostname>=<intf_type:port>       (1)
 # ssh_port=<ssh port>               (2)
 # username=<credential username>    (3)
 # password=<credential password>    (4)
 #
 # (1) For each host connected to a port on the switch, specify the hostname
 #     and the Nexus physical port (interface) it is connected to.
+#     Valid intf_type's are 'ethernet' and 'port-channel'.
+#     The default setting for <intf_type:> is 'ethernet' and need not be
+#     added to this setting.
 # (2) The TCP port for connecting via SSH to manage the switch. This is
 #     port number 22 unless the switch has been configured otherwise.
 # (3) The username for logging into the switch to manage it.
@@ -38,7 +41,8 @@
 # Example:
 # [ml2_mech_cisco_nexus:1.1.1.1]
 # compute1=1/1
-# compute2=1/2
+# compute2=ethernet:1/2
+# compute3=port-channel:1
 # ssh_port=22
 # username=admin
 # password=mySecretPassword
