Fix quota_health_monitor opt name in neutron.conf
Reasons:
- quota_healt_monitor does not exist

Changes:
- Use quota_health_monitor instead of quota_health_monitors

Change-Id: I31d6a0394a786d26f7a063afbd3b6e07fae49b9b

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -368,7 +368,7 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # The default is unlimited because a health monitor is not a real resource
 # consumer on Openstack. However, on back-end, a member is a resource consumer
 # and that is the reason why quota is possible.
-# quota_health_monitors = -1
+# quota_health_monitor = -1
 
 # Number of routers allowed per tenant. A negative value means unlimited.
 # quota_router = 10
