--- a/etc/neutron/rootwrap.d/lbaas-haproxy.filters
+++ b/etc/neutron/rootwrap.d/lbaas-haproxy.filters
@@ -20,3 +20,6 @@ mm-ctl: CommandFilter, mm-ctl, root
 # ip_lib
 ip: IpFilter, ip, root
 ip_exec: IpNetnsExecFilter, ip, root
+
+# arping
+arping: CommandFilter, arping, root
