--- a/setup.cfg
+++ b/setup.cfg
@@ -160,6 +160,7 @@ neutron.service_plugins =
     lbaas = neutron.services.loadbalancer.plugin:LoadBalancerPlugin
     vpnaas = neutron.services.vpn.plugin:VPNDriverPlugin
     metering = neutron.services.metering.metering_plugin:MeteringPlugin
+    group_policy = neutron.plugins.grouppolicy.plugin.GroupPolicyPlugin
 neutron.ml2.type_drivers =
     flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
@@ -184,6 +185,8 @@ neutron.ml2.mechanism_drivers =
     brocade = neutron.plugins.ml2.drivers.brocade.mechanism_brocade:BrocadeMechanism
 neutron.openstack.common.cache.backends =
     memory = neutron.openstack.common.cache._backends.memory:MemoryBackend
+neutron.group_policy.policy_drivers =
+    dummy = neutron.plugins.grouppolicy.drivers.dummy_driver.NoopDriver
 
 [build_sphinx]
 all_files = 1
