add engine parameter for offline migrations
Offline migration required config file containing connection string.
In that case only engine from URL was used. With this patch engine can be
passed from command line (or config file) along with plugins which sql
script will be generated accordingly.

DocImpact

Change-Id: Ib667a71960b833fd981f97fe7d6b1856084ef5c8
Closes-Bug: #1304326

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -414,6 +414,10 @@ admin_password = %SERVICE_PASSWORD%
 # main neutron server. (Leave it as is if the database runs on this host.)
 # connection = sqlite://
 
+# Database engine for which script will be generated when using offline
+# migration
+# engine =
+
 # The SQLAlchemy connection string used to connect to the slave database
 # slave_connection =
 
