Add nova_api_insecure flag to neutron
Neutron did not have any way to allow SSL validation problems in the
novaclient similar to the way nova has the neutron_api_insecure flag.
This change adds the nova_api_insecure flag to the neutron config and
also passes it in the novaclient instantiation.

Change-Id: Ifed581df253c01fab9dc1f22c8187876271b378e
Closes-Bug: #1306822

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -320,6 +320,9 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # Authorization URL for connection to nova in admin context.
 # nova_admin_auth_url =
 
+# Boolean to control ignoring SSL errors on the nova url
+# nova_api_insecure = False
+
 # Number of seconds between sending events to nova if there are any events to send
 # send_events_interval = 2
 
