UT for GroupPolicy plugin
And also some other fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -186,7 +186,7 @@ neutron.ml2.mechanism_drivers =
 neutron.openstack.common.cache.backends =
     memory = neutron.openstack.common.cache._backends.memory:MemoryBackend
 neutron.group_policy.policy_drivers =
-    dummy = neutron.plugins.grouppolicy.drivers.dummy_driver.NoopDriver
+    dummy = neutron.plugins.grouppolicy.drivers.dummy_driver:NoopDriver
 
 [build_sphinx]
 all_files = 1
