Add nova_ca_certificates_file option to neutron
Previously, neutron had no way to pass a certificates file to the
novaclient.  This change is to add that ability, similar to the way
you can pass a certificates file to neutronclient in nova.conf via
neturon_ca_certificates_file.

Change-Id: I1a3f85505eb44bee604900301af79d773e1952a3
Closes-Bug: #1309694

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -320,6 +320,9 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # Authorization URL for connection to nova in admin context.
 # nova_admin_auth_url =
 
+# CA file for novaclient to verify server certificates
+# nova_ca_certificates_file =
+
 # Boolean to control ignoring SSL errors on the nova url
 # nova_api_insecure = False
 
