add mapping driver and skeletal unit test

--- a/setup.cfg
+++ b/setup.cfg
@@ -187,6 +187,7 @@ neutron.openstack.common.cache.backends =
     memory = neutron.openstack.common.cache._backends.memory:MemoryBackend
 neutron.group_policy.policy_drivers =
     dummy = neutron.plugins.grouppolicy.drivers.dummy_driver:NoopDriver
+    mapping = neutron.plugins.grouppolicy.drivers.mapping_driver:MappingDriver
 
 [build_sphinx]
 all_files = 1
