--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -80,7 +80,8 @@ lock_path = $state_path/lock
 # Maximum amount of retries to generate a unique MAC address
 # mac_generation_retries = 16
 
-# DHCP Lease duration (in seconds)
+# DHCP Lease duration (in seconds).  Use -1 to
+# tell dnsmasq to use infinite lease times.
 # dhcp_lease_duration = 86400
 
 # Allow sending resource operation notification to DHCP agent
