add mapping items to group_policy_conf.ini

--- a/etc/neutron/plugins/grouppolicy/group_policy_conf.ini
+++ b/etc/neutron/plugins/grouppolicy/group_policy_conf.ini
@@ -1,6 +1,33 @@
 [group_policy]
 # (ListOpt) Ordered list of policy driver entrypoints
 # to be loaded from the neutron.group_policy.policy_drivers namespace.
+#
 # policy_drivers =
 # Example: policy_drivers = ml2,logger
 # Example: policy_drivers = cisco
+
+
+[group_policy_mapping]
+# (StrOpt) Name of each tenant's default routing_domain.
+#
+# default_routing_domain_name = default
+# Example: default_routing_domain = tenant_default_rd
+
+# (IntOpt) IP version (4 or 6) for implicitly created default
+# routing_domains.
+#
+# default_ip_version = 4
+# Example: default_ip_version = 6
+
+# (StrOpt) IP supernet for implicitly created default routing_domains,
+# from which subnets are allocated for endpoint_groups.
+#
+# default_ip_supernet = 172.16.0.0/12
+# Example: default_ip_supernet = 10.0.0.0/8
+
+# (IntOpt) Subnet prefix length for implicitly created default
+# routing_domains, controlling size of subnets allocated for
+# endpoint_groups.
+#
+# default_subnet_prefix_length = 26
+# Example: default_subnet_prefix_length = 24
