Added note to neutron.conf
Added note to neutron.conf which clarifies where database
connection attribute should be set.

Change-Id: Ic0631cff789046528cae8622d935b65ae9b012cb
Closes-Bug: #1261298

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -412,6 +412,10 @@ admin_password = %SERVICE_PASSWORD%
 # Replace 127.0.0.1 above with the IP address of the database used by the
 # main neutron server. (Leave it as is if the database runs on this host.)
 # connection = sqlite://
+# NOTE: In deployment the [database] section and its connection attribute may
+# be set in the corresponding core plugin '.ini' file. However, it is suggested
+# to put the [database] section and its connection attribute in this
+# configuration file.
 
 # The SQLAlchemy connection string used to connect to the slave database
 # slave_connection =
