--- a/etc/neutron/rootwrap.d/lbaas-haproxy.filters
+++ b/etc/neutron/rootwrap.d/lbaas-haproxy.filters
@@ -20,6 +20,7 @@ mm-ctl: CommandFilter, mm-ctl, root
 # ip_lib
 ip: IpFilter, ip, root
 ip_exec: IpNetnsExecFilter, ip, root
+route: CommandFilter, route, root
 
 # arping
 arping: CommandFilter, arping, root
