Control active number of REST calls from Cisco N1kv plugin to VSM
Add a config parameter to Cisco N1kv plugin to determine the total
number of active REST calls that can be made to the VSM.

Change-Id: I66433ef5673d35badcd3adc2defa43e578d4094f
Closes-Bug: #1329099

--- a/etc/neutron/plugins/cisco/cisco_plugins.ini
+++ b/etc/neutron/plugins/cisco/cisco_plugins.ini
@@ -132,3 +132,7 @@
 #
 # poll_duration =
 # Example: poll_duration = 180
+
+# (IntOpt) Number of threads to use to make HTTP requests to the VSM.
+#
+# http_pool_size = 4
