Changing the poll_duration parameter type to int
The poll_duration parameter is defined as a Str in config.py
but while using in code, it is converted to int. So just changing
the type in the config file, so no conversion is required when used

Change-Id: I1d10b4641e3ca8e464258857b27c450a43ad2e87
Closes-Bug:#1332283

--- a/etc/neutron/plugins/cisco/cisco_plugins.ini
+++ b/etc/neutron/plugins/cisco/cisco_plugins.ini
@@ -127,7 +127,7 @@
 # default_network_profile =
 # Example: default_network_profile = network_pool
 
-# (StrOpt) Time in seconds for which the plugin polls the VSM for updates in
+# (IntOpt) Time in seconds for which the plugin polls the VSM for updates in
 # policy profiles.
 #
 # poll_duration =
