Add configurable http_timeout parameter for Cisco N1K
http_timeout is a constant defined in the code. This
change makes it configurable by providing it as an
option in the config file.

DocImpact

Closes-Bug: #1332290
Change-Id: I429dd9efa43f6a596933359f4627a7761411e621

--- a/etc/neutron/plugins/cisco/cisco_plugins.ini
+++ b/etc/neutron/plugins/cisco/cisco_plugins.ini
@@ -136,3 +136,8 @@
 # (IntOpt) Number of threads to use to make HTTP requests to the VSM.
 #
 # http_pool_size = 4
+
+# (IntOpt) Timeout duration in seconds for the http request
+#
+# http_timeout =
+# Example: http_timeout = 15
