Cisco DFA ML2 Mechanism Driver
Part 1:
This commit contains changes to support ML2 mechanism driver for Cisco
DFA. For more details please see the blueprint which has more description and
link to document with requirements.

Part 2: Changes in OVS neutron agent.
(http://review.openstack.org/110065)

Part 3: DFA extension driver.
(http://review.openstack.org/111761)

Part 4: DFA config profile service plugin.
(http://review.openstack.org/111863)

Change-Id: Ib53b6705948e1ed75059b85d8809562d9bb63f65
Partially Implements: blueprint ml2-mechanism-driver-for-cisco-dfa

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -112,3 +112,17 @@
 # encap=vlan-100
 # cidr_exposed=10.10.40.2/16
 # gateway_ip=10.10.40.1
+
+[ml2_cisco_dfa]
+# (StrOpt) IP address of Cisco DCNM (Data Center Network Manager).
+# dcnm_ip = 1.1.1.1
+#
+# (StrOpt) User login name for DCNM.
+# dcnm_user = username
+#
+# (StrOpt) Login password for DCNM.
+# dcnm_password = password
+#
+# (StrOpt) Gateway MAC address when forwarding mode in created config profile
+# is proxy mode.
+# gateway_mac = 00:01:02:03:04:05
