--- a/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -20,6 +20,7 @@
 # Example: mechanism_drivers = cisco,logger
 # Example: mechanism_drivers = openvswitch,brocade
 # Example: mechanism_drivers = linuxbridge,brocade
+# Example: mechanism_drivers = openvswitch,cisco_dfa
 
 [ml2_type_flat]
 # (ListOpt) List of physical_network names with which flat networks
