--- a/etc/neutron/plugins/ml2/ml2_conf_sriov.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_sriov.ini
@@ -1,12 +1,31 @@
 # Defines configuration options for SRIOV NIC Switch MechanismDriver
+# and Agent
 
 [ml2_sriov]
 # (ListOpt) Comma-separated list of
 # supported Vendor PCI Devices, in format vendor_id:product_id
 #
-# supported_vendor_pci_devs = 15b3:1004
-# Example: supported_vendor_pci_devs = 15b3:1004, 8086:10c9
+# supported_vendor_pci_devs = 15b3:1004, 8086:10c9
+# Example: supported_vendor_pci_devs = 15b3:1004
 #
-# (BoolOpt) Requires SRIOV neutron agent for port binding
+# (BoolOpt) Requires running SRIOV neutron agent for port binding
 # agent_required = True
 
+[sriov_nic]
+# (ListOpt) Comma-separated list of <physical_network>:<network_device>
+# tuples mapping physical network names to the agent's node-specific
+# physical network device interfaces of SR-IOV physical function to be used
+# for VLAN networks. All physical networks listed in network_vlan_ranges on
+# the server should have mappings to appropriate interfaces on each agent.
+#
+# physical_device_mappings =
+# Example: physical_device_mappings = physnet1:eth1
+#
+# (ListOpt) Comma-separated list of <network_device>:<vfs__to_exclude>
+# tuples, mapping network_device to the agent's node-specific list of virtual
+# functions that should not be used for virtual networking.
+# vfs_to_exclude is a semicolon-separated list of virtual
+# functions to exclude from network_device. The network_device in the
+# mapping should appear in the physical_device_mappings list.
+# exclude_devices =
+# Example: exclude_list = eth1:0000:07:00.2; 0000:07:00.3
