neutron.conf does not have the definition of firewall quotas
We have the definition of quotas for firewall/policy/role
in code, but we do not have them in neutron.conf.

Change-Id: I23ae4f5c00ccc62dd9f97c77011da4ce0bbf983e
Closes-Bug: #1349318

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -506,6 +506,17 @@ lock_path = $state_path/lock
 # Number of floating IPs allowed per tenant. A negative value means unlimited.
 # quota_floatingip = 50
 
+# Number of firewalls allowed per tenant. A negative value means unlimited.
+# quota_firewall = 1
+
+# Number of firewall policies allowed per tenant. A negative value means
+# unlimited.
+# quota_firewall_policy = 1
+
+# Number of firewall rules allowed per tenant. A negative value means
+# unlimited.
+# quota_firewall_rule = 100
+
 [agent]
 # Use "sudo neutron-rootwrap /etc/neutron/rootwrap.conf" to use the real
 # root filter facility.
