--- a/etc/neutron/plugins/vmware/nsx.ini
+++ b/etc/neutron/plugins/vmware/nsx.ini
@@ -128,6 +128,8 @@
 # a service node is required in order to perform packet replication. This can
 # also be set to source if one wants replication to be performed locally (NOTE:
 # usually only useful for testing if one does not want to deploy a service node).
+# In order to leverage distributed routers, replication_mode should be set to
+# "service".
 # replication_mode = service
 
 [nsx_sync]
