Fix config option names in ml2_conf_sriov.ini
Config option names in ml2_conf_sriov.ini file are
not in sync with definitions in source code.

Change-Id: Ic8f7b6b8e9acd022623daabd2b209b864caa0b06
Closes-Bug: #1357339

--- a/etc/neutron/plugins/ml2/ml2_conf_sriov.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_sriov.ini
@@ -5,8 +5,8 @@
 # (ListOpt) Comma-separated list of
 # supported Vendor PCI Devices, in format vendor_id:product_id
 #
-# supported_vendor_pci_devs = 15b3:1004, 8086:10c9
-# Example: supported_vendor_pci_devs = 15b3:1004
+# supported_pci_vendor_devs = 15b3:1004, 8086:10c9
+# Example: supported_pci_vendor_devs = 15b3:1004
 #
 # (BoolOpt) Requires running SRIOV neutron agent for port binding
 # agent_required = True
@@ -28,4 +28,4 @@
 # functions to exclude from network_device. The network_device in the
 # mapping should appear in the physical_device_mappings list.
 # exclude_devices =
-# Example: exclude_list = eth1:0000:07:00.2; 0000:07:00.3
+# Example: exclude_devices = eth1:0000:07:00.2; 0000:07:00.3
