--- a/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -56,6 +56,21 @@
 # vxlan_group =
 # Example: vxlan_group = 239.1.1.1
 
+[ml2_type_nexus_vxlan]
+# (ListOpt) Comma-separated list of <vni_min>:<vni_max> tuples enumerating
+# ranges of VXLAN VNI IDs that are available for tenant network allocation.
+#
+# vni_ranges =
+# Example: 100:1000,2000:6000
+#
+# (ListOpt) Multicast groups for the VXLAN interface. When configured, will
+# enable sending all broadcast traffic to this multicast group. Comma separated
+# list of min:max ranges of multicast IP's 
+# NOTE: must be a valid multicast IP, invalid IP's will be discarded
+#
+# mcast_ranges = 
+# Example: mcast_ranges = 224.0.0.1:224.0.0.3,224.0.1.1:224.0.1.
+
 [securitygroup]
 # Controls if neutron security group is enabled or not.
 # It should be false when you use nova security group.
