Apic drivers enhancements (second approach): Backend
- Move backend facing modules to a library

Implements blueprint: apic-driver-enhancements

Change-Id: Ia4553d3885ca1886ca6bc7ea5d96afeace5fc457

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -49,17 +49,14 @@
 
 [ml2_cisco_apic]
 
-# Hostname for the APIC controller
-# apic_host=1.1.1.1
+# Hostname:port list of APIC controllers
+# apic_hosts=1.1.1.1:80, 1.1.1.2:8080, 1.1.1.3:80
 
 # Username for the APIC controller
 # apic_username=user
 
 # Password for the APIC controller
 # apic_password=password
-
-# Port for the APIC Controller
-# apic_port=80
 
 # Names for APIC objects used by Neutron
 # Note: When deploying multiple clouds against one APIC,
