Apic drivers enhancements (second approach): L2 refactor
- refactor to leverage Client's transactional capabilities
- General refactor to improve the driver's reliability

Implements blueprint: apic-driver-enhancements

Change-Id: I4deb171381e62e70818218957d82b5e27954aeb9

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -58,6 +58,12 @@
 # Password for the APIC controller
 # apic_password=password
 
+# Whether use SSl for connecting to the APIC controller or not
+# apic_use_ssl=True
+
+# How to map names to APIC: use_uuid or use_name
+# apic_name_mapping=use_name
+
 # Names for APIC objects used by Neutron
 # Note: When deploying multiple clouds against one APIC,
 #       these names must be unique between the clouds.
@@ -66,26 +72,43 @@
 # apic_node_profile=openstack_profile
 # apic_entity_profile=openstack_entity
 # apic_function_profile=openstack_function
-
-# The following flag will cause all the node profiles on the APIC to
-# be cleared when neutron-server starts. This is typically used only
-# for test environments that require clean-slate startup conditions.
-# apic_clear_node_profiles=False
+# apic_app_profile_name=openstack_app
 
 # Specify your network topology.
 # This section indicates how your compute nodes are connected to the fabric's
 # switches and ports. The format is as follows:
 #
-# [switch:<swich_id_from_the_apic>]
+# [apic_switch:<swich_id_from_the_apic>]
 # <compute_host>,<compute_host>=<switchport_the_host(s)_are_connected_to>
 #
 # You can have multiple sections, one for each switch in your fabric that is
 # participating in Openstack. e.g.
 #
-# [switch:17]
+# [apic_switch:17]
 # ubuntu,ubuntu1=1/10
 # ubuntu2,ubuntu3=1/11
 #
-# [switch:18]
+# [apic_switch:18]
 # ubuntu5,ubuntu6=1/1
 # ubuntu7,ubuntu8=1/2
+
+# Describe external connectivity.
+# In this section you can specify the external network configuration in order
+# for the plugin to be able to teach the fabric how to route the internal
+# traffic to the outside world. The external connectivity configuration
+# format is as follows:
+#
+# [apic_external_network:<externalNetworkName>]
+# switch=<switch_id_from_the_apic>
+# port=<switchport_the_external_router_is_connected_to>
+# encap=<encapsulation>
+# cidr_exposed=<cidr_exposed_to_the_external_router>
+# gateway_ip=<ip_of_the_external_gateway>
+#
+# An example follows:
+# [apic_external_network:network_ext]
+# switch=203
+# port=1/34
+# encap=vlan-100
+# cidr_exposed=10.10.40.2/16
+# gateway_ip=10.10.40.1
